--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 config/autoload/local.php # DB configuration
-module/Library/config/booklookup.ini # Key to book lookup
+module/Library/config/booklookup.ini # Key to book lookup...
 nbproject/ # Netbeans stuff
